<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="120dp"
    android:background="@color/test_background">

    <EditText
        android:id="@+id/text_old_password_content"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:gravity="center"
        android:background="@color/test_edittext_background"
        android:hint="@string/old_password"/>

    <EditText
        android:id="@+id/text_new_password_content"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:gravity="center"
        android:background="@color/test_edittext_background"
        android:hint="@string/new_password"/>

    <EditText
        android:id="@+id/text_confirm_password_content"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:singleLine="true"
        android:background="@color/test_edittext_background"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/button_modify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:textSize="14sp"
        android:text="@string/modify"
        android:onClick="clickModify"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />

</LinearLayout>
