<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/book_image_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="#00ff0000"/>

            <ImageView
                android:id="@+id/image_book_blur"
                android:layout_width="360dp"
                android:layout_height="384dp"
                android:src="@drawable/ayanami"
                />

            <ImageView
                android:id="@+id/image_book"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:maxHeight="300dp"
                android:src="@drawable/avatar2"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/book_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_book_title"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/text_publish_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_title"
                android:layout_marginTop="10dp"
                android:text="@string/detail_book_publish_info"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/text_publish_info"
                android:text="@string/button_add"
                />
            <TextView
                android:id="@+id/text_content_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_publish_info"
                android:layout_marginTop="70dp"
                android:text="@string/detail_book_content_index"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_content_index"
                android:layout_marginTop="10dp"
                android:text="@string/detail_book_content"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
